--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -28,7 +28,6 @@ library
   hs-source-dirs:
       src
   exposed-modules:
-      Lib
       Day1
   other-modules:
       Paths_adventofcode
@@ -45,6 +44,8 @@ executable adventofcode-exe
   build-depends:
       base
     , adventofcode
+    , protolude
+    , pretty
   default-language: Haskell2010
 
 test-suite adventofcode-test
