--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -30,13 +30,16 @@ library
   exposed-modules:
       Day1
       Day2
-  other-modules:
       Day3
+  other-modules:
+      Day4
       Paths_adventofcode
   build-depends:
       base >=4.7 && <5
     , protolude
+    , containers
     , foldl
+    , text
   default-language: Haskell2010
 
 executable adventofcode-exe
