--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -31,8 +31,9 @@ library
       Day1
       Day2
       Day3
-  other-modules:
       Day4
+      Day5
+  other-modules:
       Paths_adventofcode
   build-depends:
       base >=4.7 && <5
@@ -40,6 +41,7 @@ library
     , containers
     , foldl
     , text
+    , array
   default-language: Haskell2010
 
 executable adventofcode-exe
