--- a/package.yaml
+++ b/package.yaml
@@ -16,12 +16,15 @@ library:
   - Day1
   - Day2
   - Day3
+  - Day4
+  - Day5
   dependencies:
   - base >=4.7 && <5
   - protolude
   - containers
   - foldl
   - text
+  - array
 executables:
   adventofcode-exe:
     main: Main.hs
