--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -34,8 +34,8 @@ library
       Day4
       Day5
       Day6
-  other-modules:
       Day7
+  other-modules:
       Paths_adventofcode
   build-depends:
       base >=4.7 && <5
@@ -57,6 +57,7 @@ executable adventofcode-exe
     , adventofcode
     , protolude
     , pretty
+    , containers
   default-language: Haskell2010
 
 test-suite adventofcode-test
