--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -1,6 +1,8 @@
--- This file has been generated from package.yaml by hpack version 0.17.1.
+-- This file has been generated from package.yaml by hpack version 0.20.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: 3f3cbe111f1f469760a75a30c1b54e4cf67cf5ca5a968c511d1e0fe4bac65a32
 
 name:                adventofcode
 version:             0.1.0.0
@@ -39,16 +41,17 @@ library
       Day09
       Day10
       Day11
+      Day12
   other-modules:
       Paths_adventofcode
   build-depends:
-      base >=4.7 && <5
-    , protolude
+      array
+    , base >=4.7 && <5
     , containers
     , foldl
-    , text
-    , array
     , parsec
+    , protolude
+    , text
   default-language: Haskell2010
 
 executable adventofcode-exe
@@ -57,11 +60,13 @@ executable adventofcode-exe
   main-is: Main.hs
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base
-    , adventofcode
-    , protolude
-    , pretty
+      adventofcode
+    , base
     , containers
+    , pretty
+    , protolude
+  other-modules:
+      Paths_adventofcode
   default-language: Haskell2010
 
 test-suite adventofcode-test
@@ -70,10 +75,12 @@ test-suite adventofcode-test
       test
   main-is: Spec.hs
   build-depends:
-      base
+      HUnit
     , adventofcode
+    , base
     , tasty
     , tasty-hunit
-    , HUnit
+  other-modules:
+      Paths_adventofcode
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
