--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ea04591b11d049b24eb195b76d379646dcfbc1c5bf4ee126d894309a7a7a3708
+-- hash: c000ca3243983619481d89396b163acf8fb77f12488850d0f27e659ab2f1bd40
 
 name:                adventofcode
 version:             0.1.0.0
@@ -44,6 +44,7 @@ library
       Day12
       Day13
       Day14
+      Day15
   other-modules:
       Paths_adventofcode
   build-depends:
