--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -2,22 +2,22 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c000ca3243983619481d89396b163acf8fb77f12488850d0f27e659ab2f1bd40
+-- hash: 587471fb4a9e3e35e4a8caa85fa326f402b6840f011abfe42a46f3ea9b123026
 
-name:                adventofcode
-version:             0.1.0.0
-synopsis:            Solutions for adventofcode
-homepage:            https://github.com/yogsototh/adventofcode#readme
-bug-reports:         https://github.com/yogsototh/adventofcode/issues
-license:             BSD3
-license-file:        LICENSE
-author:              Yann Esposito
-maintainer:          yann.esposito@gmail.com
-copyright:           Copyright: © 2017 Yann Esposito
-category:            Web
-build-type:          Simple
-cabal-version:       >= 1.10
-description:         Please see the README on Github at <https://github.com/yogsototh/adventofcode#readme>
+name:           adventofcode
+version:        0.1.0.0
+synopsis:       Solutions for adventofcode
+description:    Please see the README on Github at <https://github.com/yogsototh/adventofcode#readme>
+category:       Web
+homepage:       https://github.com/yogsototh/adventofcode#readme
+bug-reports:    https://github.com/yogsototh/adventofcode/issues
+author:         Yann Esposito
+maintainer:     yann.esposito@gmail.com
+copyright:      Copyright: © 2017 Yann Esposito
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+cabal-version:  >= 1.10
 
 extra-source-files:
     README.md
@@ -29,6 +29,14 @@ source-repository head
 library
   hs-source-dirs:
       src
+  build-depends:
+      array
+    , base >=4.7 && <5
+    , containers
+    , foldl
+    , parsec
+    , protolude
+    , text
   exposed-modules:
       Day01
       Day02
@@ -45,22 +53,15 @@ library
       Day13
       Day14
       Day15
+      Day16
   other-modules:
       Paths_adventofcode
-  build-depends:
-      array
-    , base >=4.7 && <5
-    , containers
-    , foldl
-    , parsec
-    , protolude
-    , text
   default-language: Haskell2010
 
 executable adventofcode-exe
+  main-is: Main.hs
   hs-source-dirs:
       app
-  main-is: Main.hs
   ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       adventofcode
@@ -74,9 +75,10 @@ executable adventofcode-exe
 
 test-suite adventofcode-test
   type: exitcode-stdio-1.0
+  main-is: Spec.hs
   hs-source-dirs:
       test
-  main-is: Spec.hs
+  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
     , adventofcode
@@ -86,5 +88,4 @@ test-suite adventofcode-test
     , tasty-hunit
   other-modules:
       Paths_adventofcode
-  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
   default-language: Haskell2010
